--- a/SAE_S5/frontend/sass/partials/_body.sass
+++ b/SAE_S5/frontend/sass/partials/_body.sass
@@ -1,5 +1,15 @@
 body
     overflow-x: hidden
+    min-height: 100vh
     
     .hide
         display: none
+
+    .wrapper
+        display: flex
+        flex-direction: column
+        min-height: 100vh
+
+        #main
+            flex: 1
+           
