--- a/SAE_S5/frontend/sass/partials/_footer.sass
+++ b/SAE_S5/frontend/sass/partials/_footer.sass
@@ -1,6 +1,4 @@
 footer
-    position: fixed
-    bottom: 0
     width: 100% 
     background-color: #000000
     padding: 10px 0
